<resources>
    <string name="app_name">MyFirstExercise</string>
    <string name="nim">NIM : 3.34.19.1.13</string>
    <string name="nama">Nama : Muhammad Dafi Hisbullah</string>
    <string name="ttl">TTL : Semarang, 6 Januari 2001</string>
    <string name="prodi">Prodi : D3-Informatika</string>
    <string name="cita">Cita - Cita : Data Scientist</string>
    <string name="title">Biodata Mahasiswa</string>
</resources>